--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "cannon": "^0.6.2",
     "cross-env": "^5.2.0",
     "earcut": "^2.1.3",
-    "oimo": "^1.0.9"
+    "oimo": "^1.0.9",
+    "pepjs": "^0.4.3"
   },
   "devDependencies": {
+    "autoprefixer": "^9.3.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
